# nlp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  model.py  pyproject.toml
nlp/: pyproject.toml
notebooks/: notebook.ipynb
