[tool.poetry]
name = "nlp"
version = "0.1.0"
description = ""
authors = ["Miron <pontak.miron@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.3.3"
scikit-learn = "^0.24.2"
transformers = "^4.10.2"
torch = "^1.9.0"
wandb = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
