[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["Miron <pontak.miron@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
pandas = "^1.3.3"
scikit-learn = "^1.4.1.post1"
transformers = "^4.10.2"
torch = "^1.12.1"
wandb = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
